# CG2024-2

./: CMakeLists.txt  CONFIG-VSCode.md  README.md
0-Hello3D/: Source.cpp
1-Environment3DScenes/: Source.cpp
1-Environment3DScenes/Callbacks/: Callbacks.cpp  Callbacks.h
1-Environment3DScenes/Shader/: Shader.cpp  Shader.h
2.0-Hello3D-Camera/: Source.cpp
2.5-CameraWithDividedFolders/: Source.cpp
2.5-CameraWithDividedFolders/Callbacks/: Callbacks.cpp  Callbacks.h
2.5-CameraWithDividedFolders/Geometry/: Geometry.cpp  Geometry.h
3-CameraWithVectorDirection/: Source.cpp
4-SimpleObj/Geometry/: Geometry.cpp
4-SimpleObj/Shader/: Shader.cpp
4-SimpleObj/SimpleObj/: LoadSimpleObj.cpp
4.5-Hello3D-OBJ/: Source.cpp
Dependencies/: CMakeCache.txt
Hello3D-OBJ/: Source.cpp
Iluminacao/: Shader.h  Source.cpp
TBGA/: ObjectLoader.cpp  ObjectLoader.h  Source.cpp  shader.frag  shader.vert
